--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@awesome-cordova-plugins/native-geocoder": "^6.8.0",
     "@awesome-cordova-plugins/sms": "^6.7.0",
     "@awesome-cordova-plugins/toast": "^6.7.0",
-    "@capacitor/android": "^6.0.0",
+    "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
