--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "AppCobros",
   "integrations": {
-    "capacitor": {}
-  },
+  "capacitor": {},
+  "cordova": {}
+    },
   "type": "angular"
 }
