--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.4.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@types/swiper": "^6.0.0",
     "add": "^2.0.6",
     "cordova": "^12.0.0",
