--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@awesome-cordova-plugins/native-geocoder": "^6.8.0",
     "@awesome-cordova-plugins/sms": "^6.7.0",
     "@awesome-cordova-plugins/toast": "^6.7.0",
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
