--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
-              "localforage"
+              "localforage","html2canvas"
             ],
             "assets": [
               {
