--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@awesome-cordova-plugins/geolocation": "^6.16.0",
-    "@awesome-cordova-plugins/native-geocoder": "^6.8.0",
+    "@awesome-cordova-plugins/android-permissions": "^6.16.0",
+    "@awesome-cordova-plugins/bluetooth-serial": "^6.7.0",
+    "@awesome-cordova-plugins/core": "^6.7.0",
+    "@awesome-cordova-plugins/geolocation": "^6.7.0",
+    "@awesome-cordova-plugins/native-geocoder": "^6.7.0",
     "@awesome-cordova-plugins/sms": "^6.7.0",
     "@awesome-cordova-plugins/toast": "^6.7.0",
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "6.0.0",
+    "@capacitor/android": "^6.2.1",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/core": "^7.3.0",
+    "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
@@ -37,10 +41,14 @@
     "@types/swiper": "^6.0.0",
     "add": "^2.0.6",
     "cordova": "^12.0.0",
+    "cordova-plugin-android-permissions": "^1.1.5",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-geolocation": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.5.1",
+    "cordova-plugin-printer": "^0.8.0",
     "cordova-sms-plugin": "^1.0.3",
+    "html2canvas": "^1.4.1",
     "ionicons": "^7.0.0",
     "plugin": "^0.3.3",
     "rxjs": "~7.8.0",
@@ -58,8 +66,9 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "6.0.0",
+    "@capacitor/cli": "^7.3.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
