ACTUALIZACION PARA CONFIGURACION DE IMPRESORAS E IMPRESION DE FACTURAS

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@awesome-cordova-plugins/native-geocoder": "^6.7.0",
     "@awesome-cordova-plugins/sms": "^6.7.0",
     "@awesome-cordova-plugins/toast": "^6.7.0",
+    "@capacitor-community/bluetooth-le": "^7.1.1",
     "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "^6.2.1",
     "@capacitor/app": "6.0.0",
@@ -48,6 +49,7 @@
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "cordova-plugin-printer": "^0.8.0",
     "cordova-sms-plugin": "^1.0.3",
+    "esc-pos-encoder": "^3.0.0",
     "html2canvas": "^1.4.1",
     "ionicons": "^7.0.0",
     "plugin": "^0.3.3",
