--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:networkSecurityConfig="@xml/network_security_config"
-    android:usesCleartextTraffic="true"
+    android:usesCleartextTraffic="false"
     android:theme="@style/AppTheme"
     tools:targetApi="24">
 
