--- a/angular.json
+++ b/angular.json
@@ -39,18 +39,17 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
+          "budgets": [
+                       {
+                          "type": "initial",
+                          "maximumWarning": "2mb",
+                          "maximumError": "5mb"
+                      },
+                      {
+                        "type": "anyComponentStyle",
+                        "maximumWarning": "10kb",
+                        "maximumError": "12kb"                      }
+                    ], 
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
